# easycurses-rs

./: .gitignore  Cargo.toml  shell.nix
src/: lib.rs
