[package]
name = "easycurses"
version = "0.12.2"
authors = ["Lokathor <zefria@gmail.com>"]
repository = "https://github.com/Lokathor/easycurses-rs"
readme = "README.md"
keywords = ["curses", "tui"]
description = "A crate that makes working with curses easy."
license = "0BSD"

[dependencies]
pancurses = { version = "0.16", git = "git://github.com/spearman/pancurses.git", branch = "bump-ncurses" }
#pancurses = { version = "0.16", git = "git://github.com/czipperz/pancurses.git" }
#pancurses = { version = "0.16", path = "../pancurses-czipperz", features = ["wide"] }

[lib]
name = "easycurses"
path = "src/lib.rs"

[profile.dev]
panic = "unwind"

[profile.test]
panic = "unwind"

[profile.bench]
panic = "unwind"

[profile.release]
panic = "unwind"
