[package]
name = "easycurses-bump"
version = "0.13.1"
authors = ["Lokathor <zefria@gmail.com>"]
repository = "https://github.com/spearman/easycurses-rs"
readme = "README.md"
keywords = ["curses", "tui"]
description = "Updated fork of easycurses crate"
license = "0BSD"

[dependencies]
pancurses = "0.17"

[lib]
name = "easycurses"
path = "src/lib.rs"

[profile.dev]
panic = "unwind"

[profile.test]
panic = "unwind"

[profile.bench]
panic = "unwind"

[profile.release]
panic = "unwind"
