[package]
name = "easycurses-bump"
version = "0.13.2"
authors = ["Lokathor <zefria@gmail.com>"]
repository = "https://github.com/spearman/easycurses-rs"
readme = "README.md"
keywords = ["curses", "tui"]
description = "Updated fork of easycurses crate"
license = "0BSD"
edition = "2024"

[dependencies]
pancurses = "0.17"

[lib]
name = "easycurses"
path = "src/lib.rs"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
